## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.3 2002/10/11 20:09:00 mcoletti Exp $

SHELL = /bin/sh

EXTRA_DIST = 	unistd.h						\
		all.dsw							\
		getopt.c						\
		getopt.h						\
		getopt.dsp						\
		container_t/container_t.dsp				\
		prsdts/prsdts.dsp					\
		sb_ForeignID_t/sb_ForeignID_t.dsp			\
		sb_accessor_t/sb_accessor_t.dsp				\
		sb_arc_t/sb_arc_t.dsp					\
		sb_catd_t/sb_catd_t.dsp					\
		sb_cats_t/sb_cats_t.dsp					\
		sb_cell_t/sb_cell_t.dsp					\
		sb_comp_t/sb_comp_t.dsp					\
		sb_dddf_t/sb_dddf_t.dsp					\
		sb_ddom_t/sb_ddom_t.dsp					\
		sb_ddsh_t/sb_ddsh_t.dsp					\
		sb_iden_t/sb_iden_t.dsp					\
		sb_iref_t/sb_iref_t.dsp					\
		sb_line_t/sb_line_t.dsp					\
		sb_poly_t/sb_poly_t.dsp					\
		sb_ring_t/sb_ring_t.dsp					\
		sb_spatial_t/sb_spatial_t.dsp				\
		sb_spdm_t/sb_spdm_t.dsp					\
		sb_utils_t/sb_utils_t.dsp				\
		sb_xref_t/sb_xref_t.dsp					\
		sc_Field_t/sc_Field_t.dsp				\
		sc_MultiTypeValue_t/sc_MultiTypeValue_t.dsp		\
		sc_Subfield_t/sc_Subfield_t.dsp				\
		sdtsxx/sdtsxx.dsp					\
		sio_8211Converter_t/sio_8211Converter_t.dsp		\
		sio_8211DDRField_t/sio_8211DDRField_t.dsp		\
		sio_8211DDRLeader_t/sio_8211DDRLeader_t.dsp		\
		sio_8211DDR_t/sio_8211DDR_t.dsp				\
		sio_8211DRLeader_t/sio_8211DRLeader_t.dsp		\
		sio_8211DR_t/sio_8211DR_t.dsp				\
		sio_8211DirEntry_t/sio_8211DirEntry_t.dsp		\
		sio_8211FieldFormat_t/sio_8211FieldFormat_t.dsp		\
		sio_8211Field_t/sio_8211Field_t.dsp			\
		sio_8211SubfieldFormat_t/sio_8211SubfieldFormat_t.dsp	\
		sio_8211_t/sio_8211_t.dsp				\
		sio_Buffer_t/sio_Buffer_t.dsp				\
		sio_Error_t/sio_Error_t.dsp				\
		sio_ReadWrite_t/sio_ReadWrite_t.dsp			\
		sio_Writer_t/sio_Writer_t.dsp				\
		sysutils/sysutils.dsp

